# llama-index-starter

./: .gitignore  pyproject.toml  starter-local.py  starter.py
data/: link-web.txt
storage/: default__vector_store.json  docstore.json  index_store.json
